# FindJob26

./: .gitignore  LICENSE  README.md  job_mcp.py  pyproject.toml
gjob/: README.md
gjob/Data/: csv_to_sqlite.py  database_mcpserver.py
gjob/src/gjob/: crew.py  main.py  mcp_adapter.py
gjob/src/gjob/config/: agents.yaml  tasks.yaml
